--- a/research.html
+++ b/research.html
@@ -231,7 +231,7 @@
 									tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
 									posuere cubilia.</p>
 									<div>
-									    <img src="images/combinedOZ_var_drift.png.jpg" width="400" height="500" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
+									    <img src="images/combinedOZ_var_drift.png" width="400" height="500" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
 									</div>
 									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
 									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
@@ -241,6 +241,9 @@
 									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
+									<br>
+									<br>
+									<br>
 								</article>
 								<article class="box post">
 									<header class="style1">
