--- a/research.html
+++ b/research.html
@@ -154,9 +154,11 @@
 										<h2>X-ray Sources in the SSA22 Field</h2>
 										<p>2019-2022</p>
 									</header>
-									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
-									</a>
+									<div>
+									    <img src="images/AGN_upres.jpg" width="500" height="281" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratio vs. Period" />
+									    <p>Image Credit: NASA/Goddard Space Flight Center Conceptual Image Lab</p>
+									</div>
+									
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
 									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
@@ -186,6 +188,9 @@
 									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
+									<a href="#" class="image featured">
+										<img src="images/pic01.jpg" alt="" />
+									</a>
 								</article>
 							</div>
 
