--- a/research.html
+++ b/research.html
@@ -155,7 +155,7 @@
 										<p>2019-2022</p>
 									</header>
 									<div>
-									    <img src="images/AGN_upres.jpg" width="500" height="281" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratio vs. Period" />
+									    <img src="images/AGN_upres.jpg" width="500" height="281" align="right" style="margin: 0px 0px 0px 10px;" alt="" />
 									    <p>Image Credit: NASA/Goddard Space Flight Center Conceptual Image Lab</p>
 									</div>
 									
@@ -180,6 +180,9 @@
 									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
 									tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
 									posuere cubilia.</p>
+									<div>
+									    <img src="images/final_ssa22_lum_z_dist_classes.jpg" width="404" height="331" align="right" style="margin: 0px 0px 0px 10px;" alt="" />
+									</div>
 									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
 									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
 									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
@@ -188,9 +191,9 @@
 									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
-									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
-									</a>
+									<div>
+									    <img src="images/ssa22_full_LF_fixedLx_noproto.png" width="1201" height="457" style="margin: 10px 10px 10px 10px;" alt="" />
+									</div>
 								</article>
 							</div>
 
