--- a/research.html
+++ b/research.html
@@ -159,18 +159,14 @@
 									    <p>Image Credit: NASA/Goddard Space Flight Center Conceptual Image Lab</p>
 									</div>
 									
-									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
-									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-									amet risus elit.</p>
+									<p>Supermassive black holes lie at the center of most galaxies, and many actively accrete
+										matter to become Active Galactic Nuclei (AGNs). Due to the presence of surrounding 
+									gas, optical campaigns to detect AGNs are biased to unobscured, or broad-line AGNs (BLAGNs).
+										Observations in the X-ray (2-8 keV) with <em>Chandra</em>'s ACIS instrument can rectify this and 
+									provide an unbiased probe of these objects, thanks to the high column density-penetrating
+									nature of hard X-rays. Combined with tools like the luminosity function, these
+									observations have shown that AGNs have been active much more recently than was previously 
+									thought.</p>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
 									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
 									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
@@ -181,7 +177,7 @@
 									tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
 									posuere cubilia.</p>
 									<div>
-									    <img src="images/final_ssa22_lum_z_dist_classes.jpg" width="404" height="331" align="right" style="margin: 0px 0px 0px 10px;" alt="" />
+									    <img src="images/final_ssa22_lum_z_dist_classes.jpg" width="404" height="331" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
 									</div>
 									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
 									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
@@ -192,7 +188,10 @@
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
 									<div>
-									    <img src="images/ssa22_full_LF_fixedLx_noproto.png" width="1201" height="457" style="margin: 10px 10px 10px 10px;" alt="" />
+									    <img src="images/ssa22_full_LF_fixedLx_noproto.png" width="1201" height="457" style="margin: 10px 10px 0px 10px;" alt="" />
+									</div>
+									<div>
+									    <img src="images/ssa22_class_LF_fixedLx.png" width="1201" height="457" style="margin: 0px 10px 0px 10px;" alt="" />
 									</div>
 								</article>
 							</div>
