--- a/research.html
+++ b/research.html
@@ -162,10 +162,11 @@
 									<p>Supermassive black holes lie at the center of most galaxies, and many actively accrete
 										matter to become Active Galactic Nuclei (AGNs). Due to the presence of surrounding 
 									gas, optical campaigns to detect AGNs are biased to unobscured, or broad-line AGNs (BLAGNs).
-										Observations in the X-ray (2-8 keV) with <em>Chandra</em>'s ACIS instrument can rectify this and 
+										Observations in the X-ray (2-8 keV) with <em>Chandra</em>'s ACIS instrument can
+										rectify this and 
 									provide an unbiased probe of these objects, thanks to the high column density-penetrating
-									nature of hard X-rays. Combined with tools like the luminosity function, these
-									observations have shown that AGNs have been active much more recently than was previously 
+									nature of hard X-rays. Combined with tools like the luminosity function, astronomers
+										have shown that AGNs have been active much more recently than was previously 
 									thought.</p>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
 									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
@@ -188,10 +189,10 @@
 									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
 									amet risus elit.</p>
 									<div>
-									    <img src="images/ssa22_full_LF_fixedLx_noproto.png" width="1201" height="457" style="margin: 10px 10px 0px 10px;" alt="" />
+									    <img src="images/ssa22_full_LF_fixedLx_noproto.png" width="900" height="343" style="margin: 10px 10px 0px 10px;" alt="" />
 									</div>
 									<div>
-									    <img src="images/ssa22_class_LF_fixedLx.png" width="1201" height="457" style="margin: 0px 10px 0px 10px;" alt="" />
+									    <img src="images/ssa22_class_LF_fixedLx.png" width="900" height="343" style="margin: 0px 10px 0px 10px;" alt="" />
 									</div>
 								</article>
 							</div>
