--- a/research.html
+++ b/research.html
@@ -166,33 +166,36 @@
 										rectify this and 
 									provide an unbiased probe of these objects, thanks to the high column density-penetrating
 									nature of hard X-rays. Combined with tools like the luminosity function, astronomers
-										have shown that AGNs have been active much more recently than was previously 
-									thought.</p>
-									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-									eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-									tincidunt felis sagittis eget. Donec elementum ligula dignissim sem pulvinar non semper
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-									posuere cubilia.</p>
+										have learned that AGNs are a strongly evolving population that have been active
+										much more recently in cosmic history than was previously thought. Further, obscured
+									or non-BLAGNs tend to make up the faint end of the X-ray luminosity function (XLF) while BLAGNs
+									dominate the bright end at higher redshift.</p>
+									<p>.</p>
 									<div>
 									    <img src="images/final_ssa22_lum_z_dist_classes.jpg" width="404" height="331" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
 									</div>
-									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-									amet risus elit.</p>
+									<p>The focus of my undergraduate astronomy research was investigating the differential
+										evolution of these two AGN types with newly obtained high-resolution spectroscopy from the
+										Deep Imaging Multi-Object Spectrograph on Keck. I led a project with collaborators Anthony
+										J. Taylor and Dr. Amy Barger to combine these
+									spectra with existing X-ray and optical photometry in the Hawaii Survey Field SSA22, which is one
+										of the deepest and most well-studied <em>Chandra</em> fields (thanks to the famous
+										protocluster at z=3.09). In total, we bring the completeness of the field to 62% by updating
+										spectroscopic redshifts for nearly half of the available X-ray sources, and derive
+										optical classifications for most from our data (these are roughly encoded in the
+										luminosity distribution on the left).</p>
+									<p>After applying an incompleteness
+									correction and computing photometric redshifts for objects without redshifts, we constructed the XLF
+										in three intervals for ~160 AGN candidates in the field
+									across z=0-4 (see figure below). We found good agreement with previous works, with the XLF shifting the higher
+									X-ray luminosity with increasing redshift. We also use our classifications to study the XLF
+									for BLAGNs and non-BLAGNs separately, which reveals that the unobscured BLAGNs become increasingly
+										important at higher redshift, peaking in number density near z=2.</p>
 									<div>
-									    <img src="images/ssa22_full_LF_fixedLx_noproto.png" width="900" height="343" style="margin: 10px 10px 0px 10px;" alt="" />
+									    <img src="images/ssa22_full_LF_fixedLx_noproto.png" width="800" height="305" align="right" style="margin: 10px 0px 0px 0px;" alt="" />
 									</div>
 									<div>
-									    <img src="images/ssa22_class_LF_fixedLx.png" width="900" height="343" style="margin: 0px 10px 0px 10px;" alt="" />
+									    <img src="images/ssa22_class_LF_fixedLx.png" width="800" height="305" align="right" style="margin: 0px 0px 0px 0px;" alt="" />
 									</div>
 								</article>
 							</div>
