--- a/research.html
+++ b/research.html
@@ -143,7 +143,7 @@
 				</div>
 
 			<!-- Highlights -->
-				<section id="highlights" class="wrapper style3">
+				<div id="highlights" class="wrapper style3">
 					<div class="title">Galaxy Evolution & AGN</div>
 					<div class="container">
 
@@ -201,7 +201,7 @@
 							</div>
 
 					</div>
-				</section>
+				</div>
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
 					<div class="title">Engineering Applications to Quantum Computation</div>
