--- a/research.html
+++ b/research.html
@@ -143,7 +143,7 @@
 				</div>
 
 			<!-- Highlights -->
-				<div id="highlights" class="wrapper style3">
+				<section id="highlights" class="wrapper style3">
 					<div class="title">Galaxy Evolution & AGN</div>
 					<div class="container">
 
@@ -190,18 +190,46 @@
 									X-ray luminosity with increasing redshift. We also use our classifications to study the XLF
 									for BLAGNs and non-BLAGNs separately, which reveals that the unobscured BLAGNs become increasingly
 										important at higher redshift, peaking in number density near z=2.</p>
+									<p>After applying an incompleteness
+									correction and computing photometric redshifts for objects without redshifts, we constructed the XLF 
+										in three intervals for ~160 AGN candidates in the field
+									across z=0-4 (see figure below). We found good agreement with previous works, with the XLF shifting the higher
+									X-ray luminosity with increasing redshift. We also use our classifications to study the XLF
+									for BLAGNs and non-BLAGNs separately, which reveals that the unobscured BLAGNs become increasingly
+										important at higher redshift, peaking in number density near z=2.</p>
+									<p>After applying an incompleteness
+									correction and computing photometric redshifts for objects without redshifts, we constructed the XLF 
+										in three intervals for ~160 AGN candidates in the field
+									across z=0-4 (see figure below). We found good agreement with previous works, with the XLF shifting the higher
+									X-ray luminosity with increasing redshift. We also use our classifications to study the XLF
+									for BLAGNs and non-BLAGNs separately, which reveals that the unobscured BLAGNs become increasingly
+										important at higher redshift, peaking in number density near z=2.</p>
 									<div>
 									    <img src="images/ssa22_full_LF_fixedLx_noproto.png" width="800" height="305" align="right" style="margin: 10px 0px 0px 0px;" alt="" />
 									</div>
+									<p>After applying an incompleteness
+									correction and computing photometric redshifts for objects without redshifts, we constructed the XLF 
+										in three intervals for ~160 AGN candidates in the field
+									across z=0-4 (see figure below). We found good agreement with previous works, with the XLF shifting the higher
+									X-ray luminosity with increasing redshift. We also use our classifications to study the XLF
+									for BLAGNs and non-BLAGNs separately, which reveals that the unobscured BLAGNs become increasingly
+										important at higher redshift, peaking in number density near z=2.</p>
 									<div>
 									    <img src="images/ssa22_class_LF_fixedLx.png" width="800" height="305" align="right" style="margin: 0px 0px 10px 0px;" alt="" />
 									</div>
+									<p>After applying an incompleteness
+									correction and computing photometric redshifts for objects without redshifts, we constructed the XLF 
+										in three intervals for ~160 AGN candidates in the field
+									across z=0-4 (see figure below). We found good agreement with previous works, with the XLF shifting the higher
+									X-ray luminosity with increasing redshift. We also use our classifications to study the XLF
+									for BLAGNs and non-BLAGNs separately, which reveals that the unobscured BLAGNs become increasingly
+										important at higher redshift, peaking in number density near z=2.</p>
 									<br>
 								</article>
 							</div>
 
 					</div>
-				</div>
+				</section>
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
 					<div class="title">Engineering Applications to Quantum Computation</div>
