--- a/research.html
+++ b/research.html
@@ -230,18 +230,25 @@
 									<div>
 									    <img src="images/polarimeter_interior.jpg" width="300" height="400" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
 									</div>
-									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
-									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-									amet risus elit.</p>
+									<p>My first research experience was in Dr. Saffman's lab, which focused on approaches to quantum computing using
+										neutral atoms. The most substantial but rewarding project I worked on was developing a device and an associated procedure
+										to align laser beam polarization to the optical fiber axis in birefringent fibers. Single-mode
+										fibers are ubiquitous in optics labs (thanks to their ability to reduce system complexity), but are
+										subject to a variety of environmental stresses (e.g., bending, heating). These stresses induce unwanted
+										drifts in the polarization state of the light traveling through the fiber over time, which renders the large
+										optical set-ups needed for quantum experiments useless until realignment is achieved. Birefringent polarization-maintaining
+										fibers are able to mitigate these effects and maintain the input linear polarization state
+										due to the presence of two orthogonal stress rods with differing refractive indicies internal to the fiber. 
+										The difference of these refractive indicies is known as birefringence. How this birefringence can be used
+										to maintain polarization alignment is complicated (and fascinating!), but is broadly explained by the fact that
+										birefringence induces a well-defined phase delay for the two orthogonal states over the length of the fiber.</p>
+									<p>This alignment is good but not perfect, and is further complicated by the fact that these fibers
+									are often connectorized, containing a key-hole output at one end. The manufacturing process for
+									these fibers </p>
+										
+									<div>
+									    <img src="images/optical_setup.PNG" width="524" height="320" align="right" style="margin: 0px 0px 0px 10px;" alt="" />
+									</div>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
 									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
 									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
