--- a/research.html
+++ b/research.html
@@ -308,14 +308,14 @@
 									degrees without the QWP included along the beam path and 0.25 degress with it.
 										In addition to these experiments, we also ran test to show that:</p>
 									<ol>
-										<li>OZ Optics PM fibers maintain polarization better than equivalent Thorlabs fibers</li>
-										<li>the E-O method is not as effective for a given fiber</li>
-										<li>longer fibers (up to 10 meters) show lower overall drift</li>
-										<li>higher beam coupling (>50%) minimizes drift</li>
-										<li>equivalent results are obtained regardless of the alignment axis (i.e., slow or fast) </li>
+										<li>	(1) OZ Optics PM fibers maintain polarization better than equivalent Thorlabs fibers</li>
+										<li>	(2) the E-O method is not as effective for a given fiber</li>
+										<li>	(3) longer fibers (up to 10 meters) show lower overall drift</li>
+										<li>	(4) higher beam coupling (>50%) minimizes drift</li>
+										<li>	(5) equivalent results are obtained regardless of the alignment axis (i.e., slow or fast) </li>
 									</ol>
 									
-									<p>The primary "best-case" results of this project are displayed in the figure on the left,
+									<p>The primary "best-case" results of this project are represented in the figure on the left,
 										which displays the mean drift and variance as a function of offset angle for the
 										10-meter OZ PM fiber experiments both with (blue x) and without (blue sqaures) the QWP. 
 									These results are currently drafted in a manuscript which may be submitted to the Review of Scientific
@@ -329,9 +329,9 @@
 										<h2>Temperature Regulation System for an Atomic Trapping Chamber</h2>
 										<p>2017-2018</p>
 									</header>
-									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
-									</a>
+									<div>
+									    <img src="images/prototype_box.jpg" width="401" height="300" align="right" style="margin: 0px 0px 0px 10px;" alt="" />
+									</div>
 									<p>The first-ever research project I worked on was primarily an engineering challenge.</p>
 									
 								</article>
