--- a/research.html
+++ b/research.html
@@ -332,7 +332,12 @@
 									<div>
 									    <img src="images/prototype_box.jpg" width="401" height="300" align="right" style="margin: 0px 0px 0px 10px;" alt="" />
 									</div>
-									<p>The first-ever research project I worked on was primarily an engineering challenge.</p>
+									<p>The first-ever research project I worked on was also in Dr. Saffman's lab
+										at UW - Madison. Our group was working to use Rydberg blockades to mediate
+										atomic ensembles in our quantum computer. These ensembles are encoded in
+										special excited states known as W-sates, which atoms must be trapped in
+										to maintain.
+										In order to maximize W-state prepartation fidelity, </p>
 									
 								</article>
 							</div>
