--- a/research.html
+++ b/research.html
@@ -235,8 +235,9 @@
 										to align laser beam polarization to the optical fiber axis in birefringent fibers. Single-mode
 										fibers are ubiquitous in optics labs (thanks to their ability to reduce system complexity), but are
 										subject to a variety of environmental stresses (e.g., bending, heating). These stresses induce unwanted
-										drifts in the polarization state of the light traveling through the fiber over time, which renders the large
-										optical set-ups needed for quantum experiments useless until realignment is achieved. Birefringent polarization-maintaining (PM)
+										drifts in the polarization state of the light traveling through the fiber over time. Such misalignment renders the large
+										optical set-ups needed for neutral atom quantum experiments useless until realignment is achieved, as polarization is a
+										fundamental parameter in quantum logic. Birefringent polarization-maintaining (PM)
 										fibers are able to mitigate these effects and maintain the input linear polarization state
 										due to the presence of two orthogonal stress rods with differing refractive indicies internal to the fiber. 
 										The difference of these refractive indicies is known as birefringence. How this birefringence can be used
@@ -305,7 +306,7 @@
 										to show that
 									the drift is minimized when our frequency-ramping procedure is carried out. We find
 									that our procedure is capable of aligning the polarization axes to within 0.5
-									degrees without the QWP included along the beam path and 0.25 degress with it.
+									degrees without the QWP included along the beam path and 0.25 degrees with it.
 										In addition to these experiments, we also ran test to show that:</p>
 									<ol>
 										<li>	(1) OZ Optics PM fibers maintain polarization better than equivalent Thorlabs fibers</li>
@@ -333,7 +334,15 @@
 									    <img src="images/prototype_box.jpg" width="401" height="300" align="right" style="margin: 0px 0px 0px 10px;" alt="" />
 									</div>
 									<p>The first-ever research project I worked on was also in Dr. Saffman's lab
-										at UW - Madison. Our group was working to use Rydberg blockades to mediate
+										at UW - Madison, but was dedicated to a specific experiment. Particularly,
+										I designed and implemented a high-precision temperature control system
+										for our new Rubidium atomic trapping chamber. But first, what is an atomic trapping
+										chamber and why is temperature regulation important? In order to build a quantum computer
+										using neutral atoms, control of an array of neutral atom qubits (i.e., an optical lattice)
+										must be demonstrated. Then, one can perform quantum logic operations by
+										exciting the atoms to a high-lying (n~100) so-called Rydberg state where they
+										can undergo coherent interactions. However, fidelity.
+										rour group was working to use Rydberg blockades to mediate
 										atomic ensembles in our quantum computer. These ensembles are encoded in
 										special excited states known as W-sates, which atoms must be trapped in
 										to maintain.
