--- a/research.html
+++ b/research.html
@@ -338,15 +338,25 @@
 										I designed and implemented a high-precision temperature control system
 										for our new Rubidium atomic trapping chamber. But first, what is an atomic trapping
 										chamber and why is temperature regulation important? In order to build a quantum computer
-										using neutral atoms, control of an array of neutral atom qubits (i.e., an optical lattice)
-										must be demonstrated. Then, one can perform quantum logic operations by
+										using neutral atoms, ensembles of neutral atoms must be encoded and trapped (via laser cooling)
+										in
+										special excited states known as W-sates. Maintaining this array of neutral atom quantum bits or qubits
+										results in an optical lattice that can serve as the basis for a quantum computer. 
+										If reliably trapped, one can perform quantum logic operations by
 										exciting the atoms to a high-lying (n~100) so-called Rydberg state where they
-										can undergo coherent interactions. However, fidelity.
-										rour group was working to use Rydberg blockades to mediate
-										atomic ensembles in our quantum computer. These ensembles are encoded in
-										special excited states known as W-sates, which atoms must be trapped in
-										to maintain.
-										In order to maximize W-state prepartation fidelity, </p>
+										can undergo coherent interactions. However, great care must be taken to mitigate
+										the rate of logical errors (i.e., incorrect atomic states) for this trap to hold.
+										Theoretically, the potential fidelity (error rate) 
+										for two-qubit entanglement via Rydberg interactions exceeds >0.9999, but previous
+										attempts by any laboratory
+										have only reached 0.8. Maximizing the fidelity of the initial W-state preparation
+										is possible by either reducing system noise, minimizing polarization crosstalk 
+										(i.e., polarization drift, see above project), or otherwise
+									improving the stability of atomic cooling in the trap.</p>
+									<p>My work for this project addressed the first of these points, for which I
+										was charged with creating a temperature regulation system for our new
+										atomic trap. This area was the largest potential for improvement since 1 degree C variation, 
+									trapped atoms are essentially moving targets.</p>
 									
 								</article>
 							</div>
