--- a/research.html
+++ b/research.html
@@ -354,9 +354,14 @@
 										(i.e., polarization drift, see above project), or otherwise
 									improving the stability of atomic cooling in the trap.</p>
 									<p>My work for this project addressed the first of these points, for which I
-										was charged with creating a temperature regulation system for our new
-										atomic trap. This area was the largest potential for improvement since 1 degree C variation, 
-									trapped atoms are essentially moving targets.</p>
+										was charged with creating a temperature regulation system for our group's newest
+										atomic trap. The environmental perturbations caused by large temperature fluctuations
+										(>1<span>&#176;</span>C)
+										throughout the previous fiberoptic system essentially made our
+										optically trapped
+										atoms moving targets. Therefore, I first developed a see-through prototype of a
+										temperature-stable chamber which involved three ultra low-noise water-cooled fans
+										(seen in the picture on the right). Preliminary tests.</p>
 									
 								</article>
 							</div>
