--- a/research.html
+++ b/research.html
@@ -300,7 +300,7 @@
 									<p>In order test the alignment stability and sensitivity associated with
 										this method, we induce an external thermal stress on an OZ Optics
 										PM fiber and measure the resultant polarization drift. Particularly, we
-									used a make-shift oven to heat the PM fiber roughly 5 degrees Celsius over 15 minutes
+									used a make-shift oven to heat the PM fiber roughly 5<span>&#176;</span>C over 15 minutes
 									and we measure the mean and the variance of the alignment drift during the experiment. 
 									We repeat this for several angular offsets from nominal alignment (±0.25,±0.5,±1, and ±2 degrees)
 										to show that
@@ -361,7 +361,16 @@
 										optically trapped
 										atoms moving targets. Therefore, I first developed a see-through prototype of a
 										temperature-stable chamber which involved three ultra low-noise water-cooled fans
-										(seen in the picture on the right). Preliminary tests.</p>
+										(seen in the picture on the top right). Proof-of-concept tests with this prototype
+										showed promise, so I drafted a full plan for a negative feedback PID temperature loop.
+									I ordered the appropriate electronics (PID controller, fuses, heat sink, temperature probes, etc.) and machined an
+									electronics box I designed on SolidWorks. After careful assembly, I ran another set of preliminary
+									tests with the system to optimize the set-up, and integrated real-time temperature readout and control
+									via lab computers. Finally, I installed the temperature regulation system into the new
+									atomic chamber. The system is capable of consistently maintaining ~mK-level stability 
+									within the chamber, far exceeding initial requirements and expectations and representing
+									an improvement of over two orders of mangitude relative to the previous ambient trap. The
+									lab still uses this system to this day for Rubidium experiments.</p>
 									
 								</article>
 							</div>
