--- a/research.html
+++ b/research.html
@@ -97,8 +97,8 @@
 										much more isolated than others. We posit that a large fraction of these companions
 										to hot Jupiters are too distant and/or exhibit too high of mutual inclinations to be 
 										detected efficiently, causing hot Jupiters to appear more lonely than they truly are.
-										Our paper (Radzom et al. 2022b) will soon be
-										submitted to the ApJ.</p>
+										Our paper (Radzom et al. 2022) was
+										accepted to the ApJ in October 2022.</p>
 								</article>
 								<br>
 								<br>
