--- a/research.html
+++ b/research.html
@@ -97,8 +97,7 @@
 										much more isolated than others. We posit that a large fraction of these companions
 										to hot Jupiters are too distant and/or exhibit too high of mutual inclinations to be 
 										detected efficiently, causing hot Jupiters to appear more lonely than they truly are.
-										Our paper (Radzom et al. 2022) was
-										accepted to the ApJ in October 2022.</p>
+										Our paper (Radzom et al. 2022b) will soon be submitted to the ApJ.</p>
 								</article>
 								<br>
 								<br>
@@ -195,7 +194,7 @@
 									the faint-end slope of our AGN XLF flattens with redshift. While we find that both BLAGNs and
 									non-BLAGNs evolve in luminosity and density with increasing redshift, non-BLAGNs exhibit the strongest
 									evolution and peak in number density near z=1. The XLF of these obscured AGNs tend to have a lower break luminosity and higher
-									normalization across z=1-4. This work (Radzom et al. 2022a) was submitted to ApJ in September 2022. </p>
+									normalization across z=1-4. This work (Radzom et al. 2022) was accepted to ApJ in October 2022 and is on arXiv. </p>
 									
 									<figure>
 										<img src="images/ssa22_full_LF_fixedLx_noproto.png" width="800" height="305" align="right" style="margin: 10px 0px 0px 0px;" alt="" />
