--- a/publications.html
+++ b/publications.html
@@ -20,7 +20,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Publications</a></h1>
-							<p>A free responsive site template by HTML5 UP</p>
+							<!-- <p>A free responsive site template by HTML5 UP</p>-->
 						</div>
 
 					<!-- Nav -->
@@ -38,32 +38,23 @@
 
 			<!-- Main -->
 				<div id="main" class="wrapper style2">
-					<div class="title">No Sidebar</div>
+					<div class="title">Lists</div>
 					<div class="container">
 
 						<!-- Content -->
 							<div id="content">
 								<article class="box post">
 									<header class="style1">
-										<h2>Lorem ipsum dolor sit amet magna egestas<br class="mobile-hide" />
-										morbi bibendum sed malesuada</h2>
-										<p>Tempus feugiat veroeros sed nullam dolore</p>
+										<h2>Refereed Works</h2>
+										<!--<p>Tempus feugiat veroeros sed nullam dolore</p>-->
 									</header>
-									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
-									</a>
-									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
-									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-									amet risus elit.</p>
+									<p> 
+									<ol>
+  										<li>Coffee</li>
+  										<li>Tea</li>
+									        <li>Milk</li>
+									</ol>
+										</p>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
 									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
 									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
