color change attempt 1

--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@
 										<!--<p>Tempus feugiat veroeros sed nullam dolore</p>-->
 									</header>
 									<p> 
-									<ol>
+									<ol style="color:black;">
   										<li>Coffee</li>
   										<li>Tea</li>
 									        <li>Milk</li>
