font size attempt 1

--- a/publications.html
+++ b/publications.html
@@ -50,9 +50,9 @@
 									</header>
 									<p> 
 									<ol style="color:black;">
-  										<li>Coffee</li>
-  										<li>Tea</li>
-									        <li>Milk</li>
+  										<li><font size="+2">Coffee<\font></li>
+  										<li><font size="+4">Coffee<\font></li>
+									        <li><font size="+6">Coffee<\font></li>
 									</ol>
 										</p>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
