--- a/publications.html
+++ b/publications.html
@@ -50,9 +50,7 @@
 									</header>
 									<p> 
 									<ol style="color:black;">
-  										<li><font size="+2">Coffee<\font></li>
-  										<li><font size="+4">Coffee<\font></li>
-									        <li><font size="+6">Coffee<\font></li>
+  										<li><font size="+2">Radzom, B. T., Taylor, A. J., Barger, A. J., & Cowie, L. L. 2022</li>
 									</ol>
 										</p>
 									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
