--- a/publications.html
+++ b/publications.html
@@ -48,28 +48,27 @@
 										<h2>Refereed Works</h2>
 										<!--<p>Tempus feugiat veroeros sed nullam dolore</p>-->
 									</header>
-									<p> 
+									<p><font size="+2">
 									<ol style="color:black;">
-  										<li><font size="+2">Radzom, B. T., Taylor, A. J., Barger, A. J., & Cowie, L. L. 2022</li>
+  										<li>Radzom, B. T., Taylor, A. J., Barger, A. J., & Cowie, L. L. 2022</li>
 									</ol>
 										</p>
-									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-									eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-									tincidunt felis sagittis eget. Donec elementum ligula dignissim sem pulvinar non semper
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-									posuere cubilia.</p>
-									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-									amet risus elit.</p>
+									<header class="style1">
+										<h2>Talks</h2>
+										<p><font size="+2">
+											</header>
+									<ol style="color:black;">
+  										<li>Radzom, B. T., SSA22 Activity</li>
+									</ol>
+										</p>
+									<header class="style1">
+										<h2>Posters</h2>
+										<p><font size="+2">
+											</header>
+									<ol style="color:black;">
+  										<li>Radzom, B. T., AAS 236</li>
+									</ol>
+										</p>
 								</article>
 							</div>
 
