--- a/publications.html
+++ b/publications.html
@@ -55,16 +55,16 @@
 										</p>
 									<header class="style1">
 										<h2>Talks</h2>
-										<p><font size="+2">
 											</header>
+									<p><font size="+2">
 									<ol style="color:black;">
   										<li>Radzom, B. T., SSA22 Activity</li>
 									</ol>
-										</p>
+										</font></p>
 									<header class="style1">
 										<h2>Posters</h2>
-										<p><font size="+2">
-											</header>
+										</header>
+									<p><font size="+2">
 									<ol style="color:black;">
   										<li>Radzom, B. T., AAS 236</li>
 									</ol>
