--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
 									</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-  										<li>Brandon T. Radzom, Anthony J. Taylor, Amy J. Barger, Lennox L. Cowie 2022. X-ray Sources in the Chandra Field SSA22,
+										<li><strong>Brandon T. Radzom</strong>, Anthony J. Taylor, Amy J. Barger, Lennox L. Cowie 2022. X-ray Sources in the Chandra Field SSA22,
 accepted to ApJ (October 2022); arXiv:2210.10796</li>
 									</ol>
 										</font></p>
@@ -59,7 +59,7 @@ accepted to ApJ (October 2022); arXiv:2210.10796</li>
 											</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-  										<li><emph>The X-ray Luminosity Function of Optically Narrow and Broad-line AGNs Out To 𝑧 ∼ 4.</emph> Fall 2020 IU Astronomy Lunch
+  										<li><em>The X-ray Luminosity Function of Optically Narrow and Broad-line AGNs Out To 𝑧 ∼ 4.</em> Fall 2020 IU Astronomy Lunch
 Talk Series</li>
 									</ol>
 										</font></p>
@@ -68,8 +68,8 @@ Talk Series</li>
 										</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-										<li>Brandon T. Radzom, Songhu Wang, and Bonan Pu. “In Situ Origins of Hot Jupiters”, 2022, Emerging Researchers in Exoplanet Science VII, 10.5281/zenodo.6944743</li>
-  										<li>Brandon T. Radzom, Amy J. Barger, and Anthony J. Taylor. “Characterizing AGN Activity in the SSA22 Field”, 2020, American
+										<li><strong>Brandon T. Radzom<\strong>, Songhu Wang, and Bonan Pu. “In Situ Origins of Hot Jupiters”, 2022, Emerging Researchers in Exoplanet Science VII, 10.5281/zenodo.6944743</li>
+											<li><strong>Brandon T. Radzom</strong>, Amy J. Barger, and Anthony J. Taylor. “Characterizing AGN Activity in the SSA22 Field”, 2020, American
 Astronomical Society Meeting #236, id.137.03
 </li>
 									</ol>
