--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@ Talk Series</li>
 										</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-										<li><strong>Brandon T. Radzom<\strong>, Songhu Wang, and Bonan Pu. “In Situ Origins of Hot Jupiters”, 2022, Emerging Researchers in Exoplanet Science VII, 10.5281/zenodo.6944743</li>
+										<li><strong>Brandon T. Radzom</strong>, Songhu Wang, and Bonan Pu. “In Situ Origins of Hot Jupiters”, 2022, Emerging Researchers in Exoplanet Science VII, 10.5281/zenodo.6944743</li>
 											<li><strong>Brandon T. Radzom</strong>, Amy J. Barger, and Anthony J. Taylor. “Characterizing AGN Activity in the SSA22 Field”, 2020, American
 Astronomical Society Meeting #236, id.137.03
 </li>
