--- a/publications.html
+++ b/publications.html
@@ -50,8 +50,7 @@
 									</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-										<li><strong>Brandon T. Radzom</strong>, Anthony J. Taylor, Amy J. Barger, Lennox L. Cowie 2022. X-ray Sources in the Chandra Field SSA22,
-accepted to ApJ (October 2022); arXiv:2210.10796</li>
+										<li><strong>Brandon T. Radzom</strong>, Anthony J. Taylor, Amy J. Barger, Lennox L. Cowie 2022. X-ray Sources in the Chandra Field SSA22, <em>ApJ</em> 940 114, doi:10.3847/1538-4357/ac9bfe</li>
 									</ol>
 										</font></p>
 									<header class="style1">
@@ -59,6 +58,7 @@ accepted to ApJ (October 2022); arXiv:2210.10796</li>
 											</header>
 									<p><font size="+2">
 									<ol style="color:black;">
+										<li><em>In Situ Origins of Hot Jupiter Isolation.</em> Great Lakes Exoplanet Area Meeting 2022.</li>
   										<li><em>The X-ray Luminosity Function of Optically Narrow and Broad-line AGNs Out To 𝑧 ∼ 4.</em> Fall 2020 IU Astronomy Lunch
 Talk Series</li>
 									</ol>
