--- a/research.html
+++ b/research.html
@@ -52,9 +52,10 @@
 									    <img src="images/HJ_irradiated.jpg" width="468" height="347" align="left" style="margin: 10px 10px 0px 0px;" alt="NASA/Ames/JPL-Caltech" />
 									    <p>Image Credit: NASA/Ames/JPL-Caltech</p>
 									</div>
-									<p>The longest-standing mystery in exoplanets is the origin of hot Jupiters. The conventional theory
-										is that these short-period gas giants first form in the outer regions of their respective systems
-										before migrating inward to their current orbits. While several variants of this inward migration
+									<p>The longest-standing mystery in the field of exoplanets is the origin of short-period gas giants.
+										The very shortest-period population of such planets, known as hot Jupiters, have conventionally been thought
+										to form through some dynamically violent process, as they are rarely observed to host nearby planetary companions.
+										While several variants of this inward migration
 										paradigm (e.g., disk migration, high-eccentricity migration) are successful in explaining the observed properties of hot Jupiters (and warm Jupiters),
 										none are fully consistent with the full suite of known characteristics.
 										Chief among these is the <em>observed isolation</em> of hot Jupiters relative to warm Jupiters,
@@ -97,7 +98,7 @@
 										much more isolated than others. We posit that a large fraction of these companions
 										to hot Jupiters are too distant and/or exhibit too high of mutual inclinations to be 
 										detected efficiently, causing hot Jupiters to appear more lonely than they truly are.
-										Our paper (Radzom et al. 2022b) will soon be submitted to the ApJ.</p>
+										Our paper (Radzom et al. 2023) will soon be submitted to the ApJ.</p>
 								</article>
 								<br>
 								<br>
